First stage complete, everything working?

--- a/VoidDays/App.config
+++ b/VoidDays/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="VoidDaysContext" connectionString="Server=voiddays.cibbborukfu2.us-west-2.rds.amazonaws.com; Port=3306; Uid=admin;Database=crate_app; Pwd=Sprint100;convert zero datetime=True;max pool size=200" providerName="MySql.Data.MySqlClient" />
+    <add name="VoidDaysContext" connectionString="Server=voiddays.cibbborukfu2.us-west-2.rds.amazonaws.com; Port=3306; Uid=admin;Database=VoidDays; Pwd=Sprint100;convert zero datetime=True;max pool size=200" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
