changes to db creation

--- a/VoidDays/App.config
+++ b/VoidDays/App.config
@@ -5,7 +5,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="VoidDaysContext" connectionString="Server=voiddays.cibbborukfu2.us-west-2.rds.amazonaws.com; Port=3306; Uid=admin;Database=VoidDays; Pwd=Sprint100;convert zero datetime=True;max pool size=200" providerName="MySql.Data.MySqlClient" />
+    <add name="VoidDaysContext" connectionString="Server=localhost; Port=3306; Uid=root;Database=VoidDays; Pwd=100Backstroke;convert zero datetime=True;max pool size=200"
+      providerName="MySql.Data.MySqlClient" />
+    <add name="VoidDays.Properties.Settings.VoidDaysConnectionString"
+      connectionString="server=localhost;user id=root;password=100Backstroke;persistsecurityinfo=True;database=VoidDays"
+      providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -17,7 +21,7 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <!--<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />-->
     <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
   </entityFramework>
 <system.data>
