--- a/VoidDays/VoidDays.csproj
+++ b/VoidDays/VoidDays.csproj
@@ -232,6 +232,14 @@
     <Compile Include="Views\Splash.xaml.cs">
       <DependentUpon>Splash.xaml</DependentUpon>
     </Compile>
+    <Compile Include="VoidDaysDataSet.cs">
+      <DependentUpon>VoidDaysDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="VoidDaysDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VoidDaysDataSet.xsd</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -333,6 +341,17 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="VoidDaysDataSet.xsc">
+      <DependentUpon>VoidDaysDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="VoidDaysDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>VoidDaysDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="VoidDaysDataSet.xss">
+      <DependentUpon>VoidDaysDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
