--- a/VoidDays/packages.config
+++ b/VoidDays/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Castle.Core" version="3.2.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="Fody" version="1.29.2" targetFramework="net452" developmentDependency="true" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net452" />
@@ -11,4 +11,9 @@
   <package id="Prism.Core" version="6.3.0" targetFramework="net452" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net452" />
   <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="net452" developmentDependency="true" />
+  <package id="SQLite.CodeFirst" version="1.5.1.25" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.109.1" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.1" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net452" />
 </packages>
