--- a/VoidDays/packages.config
+++ b/VoidDays/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Baseclass.Contrib.Nuget.Output" version="2.4.3" targetFramework="net452" />
   <package id="Castle.Core" version="3.2.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="Fody" version="1.29.2" targetFramework="net452" developmentDependency="true" />
+  <package id="libsodium-net" version="0.10.0" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
