adding wcf service

--- a/VoidDays/App.config
+++ b/VoidDays/App.config
@@ -6,7 +6,8 @@
   </configSections>
   <connectionStrings>
     <add name="VoidDaysContext" connectionString="Server=localhost; Port=3306; Uid=root;Database=VoidDays; Pwd=100Backstroke;convert zero datetime=True;max pool size=200" providerName="MySql.Data.MySqlClient" />
-    <add name="VoidDays.Properties.Settings.VoidDaysConnectionString" connectionString="server=localhost;user id=root;password=100Backstroke;persistsecurityinfo=True;database=VoidDays" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="VoidDays.Properties.Settings.VoidDaysConnectionString" connectionString="server=localhost;user id=root;password=100Backstroke;persistsecurityinfo=True;database=VoidDays" providerName="MySql.Data.MySqlClient" />-->
+    <add name="VoidDays.Properties.Settings.VoidDaysConnectionString" connectionString="server=localhost;user id=test;password=tes;persistsecurityinfo=True;database=voiddays_4" providerName="MySql.Data.MySqlClient" />
     <add name="VoidDaysLiteContext" connectionString="Data Source=.\voiddays.db" providerName="System.Data.SQLite" />
   </connectionStrings>
   <startup>
@@ -33,4 +34,20 @@
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
+  <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_IVoidDaysLoginService" />
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/VoidDaysServerLibrary/VoidDaysLoginService"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IVoidDaysLoginService"
+        contract="VoidDaysLoginService.IVoidDaysLoginService" name="WSHttpBinding_IVoidDaysLoginService">
+        <identity>
+          <userPrincipalName value="DESKTOP-CCC4255\msrad" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
