--- a/VoidDays/App.config
+++ b/VoidDays/App.config
@@ -7,7 +7,7 @@
   <connectionStrings>
     <add name="VoidDaysContext" connectionString="Server=localhost; Port=3306; Uid=root;Database=VoidDays; Pwd=100Backstroke;convert zero datetime=True;max pool size=200" providerName="MySql.Data.MySqlClient" />
     <!--<add name="VoidDays.Properties.Settings.VoidDaysConnectionString" connectionString="server=localhost;user id=root;password=100Backstroke;persistsecurityinfo=True;database=VoidDays" providerName="MySql.Data.MySqlClient" />-->
-    <add name="VoidDays.Properties.Settings.VoidDaysConnectionString" connectionString="server=localhost;user id=micktest2;password=test;persistsecurityinfo=True;database=voiddays_6" providerName="MySql.Data.MySqlClient" />
+    <add name="VoidDays.Properties.Settings.VoidDaysConnectionString" connectionString="server=localhost;user id=micktest;password=test;persistsecurityinfo=True;database=voiddays" providerName="MySql.Data.MySqlClient" />
     <add name="VoidDaysLiteContext" connectionString="Data Source=.\voiddays.db" providerName="System.Data.SQLite" />
   </connectionStrings>
   <startup>
