--- a/VoidDays/App.config
+++ b/VoidDays/App.config
@@ -36,8 +36,12 @@
   </system.data>
   <system.serviceModel>
     <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IVoidDaysLoginService" />
+      </basicHttpBinding>
       <wsHttpBinding>
         <binding name="WSHttpBinding_IVoidDaysLoginService" />
+        <binding name="WSHttpBinding_IVoidDaysLoginService1" />
       </wsHttpBinding>
     </bindings>
     <client>
@@ -48,6 +52,16 @@
           <userPrincipalName value="DESKTOP-CCC4255\msrad" />
         </identity>
       </endpoint>
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/VoidDaysServerLibrary/VoidDaysLoginService"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IVoidDaysLoginService1"
+        contract="ServiceReference1.IVoidDaysLoginService" name="WSHttpBinding_IVoidDaysLoginService1">
+        <identity>
+          <userPrincipalName value="EC2AMAZ-7H3NCN8\Administrator" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://3.16.24.128:8733/Design_Time_Addresses/VoidDaysServerLibrary/VoidDaysLoginService"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IVoidDaysLoginService"
+        contract="ServiceReference2.IVoidDaysLoginService" name="BasicHttpBinding_IVoidDaysLoginService" />
     </client>
   </system.serviceModel>
 </configuration>
