fix for void days

--- a/VoidDays/App.config
+++ b/VoidDays/App.config
@@ -42,6 +42,7 @@
       <wsHttpBinding>
         <binding name="WSHttpBinding_IVoidDaysLoginService" />
         <binding name="WSHttpBinding_IVoidDaysLoginService1" />
+        <binding name="WSHttpBinding_IVoidDaysLoginService2" />
       </wsHttpBinding>
     </bindings>
     <client>
